--- a/迴圈練習.html
+++ b/迴圈練習.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>迴圈練習123</title>
+  <title>迴圈練習ABC</title>
 </head>
 <body>
   <script>
